--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.9",
+    "@mui/styled-engine": "^5.10.8",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
