--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -20,6 +20,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.6",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
