--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.10.9",
     "@mui/styled-engine": "^5.10.8",
     "date-fns": "^2.29.3",
+    "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
@@ -26,11 +27,15 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.7",
+    "@graphql-codegen/client-preset": "^1.0.7",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.6",
     "@types/node": "18.11.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "graphql-codegen-plugin-typescript-swr": "^0.8.3",
+    "typescript": "^4.8.4"
   }
 }
