--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -37,5 +37,8 @@
     "eslint-config-next": "12.3.1",
     "graphql-codegen-plugin-typescript-swr": "^0.8.3",
     "typescript": "^4.8.4"
+  },
+  "scripts": {
+    "generate": "graphql-codegen"
   }
 }
