--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -37,8 +38,5 @@
     "eslint-config-next": "12.3.1",
     "graphql-codegen-plugin-typescript-swr": "^0.8.3",
     "typescript": "^4.8.4"
-  },
-  "scripts": {
-    "generate": "graphql-codegen"
   }
 }
