fixed port to publish in makefile to 8080

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,6 +1,6 @@
 .PHONY: bash
 bash:
-	docker run --rm -ti --name serv --network this-drink-doesnt-exist_local --publish 80:80 --mount type=volume,src=serv-cache,dst=/.cache --mount type=bind,src=`pwd`/..,dst=/this-drink-doesnt-exist --workdir /this-drink-doesnt-exist/backend --env-file .env -e GOCACHE=/.cache/gocache -e GOMODCACHE=/.cache/gomodcache golang:1.19.0 bash
+	docker run --rm -ti --name serv --network this-drink-doesnt-exist_local --publish 8080:8080 --mount type=volume,src=serv-cache,dst=/.cache --mount type=bind,src=`pwd`/..,dst=/this-drink-doesnt-exist --workdir /this-drink-doesnt-exist/backend --env-file .env -e GOCACHE=/.cache/gocache -e GOMODCACHE=/.cache/gomodcache golang:1.19.0 bash
 
 .PHONY: test
 test:
@@ -23,6 +23,10 @@ vet:
 build:
 	go build -v -o serv -ldflags "-X main.revision=$(shell git rev-parse HEAD)" ./
 
+.PHONY: run
+run:
+	go run server.go
+
 .PHONY: gqlgen
-gqlgen-app: gqlgen-shared
+gqlgen:
 	-go run github.com/99designs/gqlgen --verbose --config gqlgen.yml
